--- a/layout/_partial/component/comments.ejs
+++ b/layout/_partial/component/comments.ejs
@@ -1,6 +1,7 @@
-  <div class="fexo-comments <%= className %>">
+  <div class="fexo-comments <%= className %>" id="comment">
     <%- partial('disqus') %>
     <%- partial('duoshuo') %>
     <%- partial('gentie') %>
     <%- partial('hypercomments') %>	
+    <%- partial('gitment') %>
   </div>
