--- a/layout/_partial/head.ejs
+++ b/layout/_partial/head.ejs
@@ -42,7 +42,7 @@
   <% } %>
 
   <% if (theme.favicon){ %>
-    <link rel="icon" href="<%- theme.favicon %>">
+    <link rel="icon" href="<%- theme.favicon %>?v=2" type="image/x-icon">
   <% } %>
 
   <%- partial('style') %>
